# rChess

./: CMakeLists.txt  LICENSE  README.md
include/core/: Board.h  Game.h  Move.h  Piece.h  Player.h  Position.h
include/network/: NetworkManager.h
include/ui/: Display.h  InputParser.h
include/utils/: Utils.h
src/: main.cpp
src/core/: Board.cpp  Game.cpp  Move.cpp  Piece.cpp  Player.cpp
src/network/: NetworkManager.cpp
src/ui/: Display.cpp  InputParser.cpp
src/utils/: Utils.cpp
tests/: CMakeLists.txt  test_board.cpp  test_chess.cpp  test_game_logic.cpp  test_pieces.cpp
